# cblas-syrk-test

./: CMakeLists.txt  main.c
